// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`initialize dashboard handler for a new dashboard should initialize new dashboard with default filter context 1`] = `
Object {
  "description": "",
  "filters": Array [
    Object {
      "dateFilter": Object {
        "from": 0,
        "granularity": "GDC.time.month",
        "to": 0,
        "type": "relative",
      },
    },
  ],
  "title": "filterContext",
}
`;

exports[`initialize dashboard handler for a new dashboard should initialize new dashboard with default layout 1`] = `
Object {
  "sections": Array [],
  "type": "IDashboardLayout",
}
`;

exports[`initialize dashboard handler for an empty dashboard should add default filter context for an empty dashboard 1`] = `
Object {
  "description": "",
  "filters": Array [],
  "title": "filterContext",
}
`;

exports[`initialize dashboard handler for an empty dashboard should add default layout for an empty dashboard 1`] = `
Object {
  "sections": Array [],
  "type": "IDashboardLayout",
}
`;

exports[`initialize dashboard handler for any dashboard should resolve config props that can be obtained from backend 1`] = `
Object {
  "allowUnfinishedFeatures": false,
  "colorPalette": Array [],
  "dateFilterConfig": Object {
    "absoluteForm": Object {
      "from": Any<String>,
      "localIdentifier": "ABSOLUTE_FORM",
      "name": "",
      "to": Any<String>,
      "type": "absoluteForm",
      "visible": true,
    },
    "absolutePresets": Array [],
    "allTime": Object {
      "localIdentifier": "ALL_TIME",
      "name": "",
      "type": "allTime",
      "visible": true,
    },
    "ref": Object {
      "identifier": "defaultDateFilterProjectConfig",
    },
    "relativeForm": Object {
      "availableGranularities": Array [
        "GDC.time.month",
        "GDC.time.date",
        "GDC.time.quarter",
        "GDC.time.year",
      ],
      "localIdentifier": "RELATIVE_FORM",
      "name": "",
      "type": "relativeForm",
      "visible": true,
    },
    "relativePresets": Array [
      Object {
        "from": -6,
        "granularity": "GDC.time.date",
        "localIdentifier": "LAST_7_DAYS",
        "name": "",
        "to": 0,
        "type": "relativePreset",
        "visible": true,
      },
      Object {
        "from": -29,
        "granularity": "GDC.time.date",
        "localIdentifier": "LAST_30_DAYS",
        "name": "",
        "to": 0,
        "type": "relativePreset",
        "visible": true,
      },
      Object {
        "from": -89,
        "granularity": "GDC.time.date",
        "localIdentifier": "LAST_90_DAYS",
        "name": "",
        "to": 0,
        "type": "relativePreset",
        "visible": true,
      },
      Object {
        "from": 0,
        "granularity": "GDC.time.month",
        "localIdentifier": "THIS_MONTH",
        "name": "",
        "to": 0,
        "type": "relativePreset",
        "visible": true,
      },
      Object {
        "from": -1,
        "granularity": "GDC.time.month",
        "localIdentifier": "LAST_MONTH",
        "name": "",
        "to": -1,
        "type": "relativePreset",
        "visible": true,
      },
      Object {
        "from": -11,
        "granularity": "GDC.time.month",
        "localIdentifier": "LAST_12_MONTHS",
        "name": "",
        "to": 0,
        "type": "relativePreset",
        "visible": true,
      },
      Object {
        "from": 0,
        "granularity": "GDC.time.quarter",
        "localIdentifier": "THIS_QUARTER",
        "name": "",
        "to": 0,
        "type": "relativePreset",
        "visible": true,
      },
      Object {
        "from": -1,
        "granularity": "GDC.time.quarter",
        "localIdentifier": "LAST_QUARTER",
        "name": "",
        "to": -1,
        "type": "relativePreset",
        "visible": true,
      },
      Object {
        "from": -3,
        "granularity": "GDC.time.quarter",
        "localIdentifier": "LAST_4_QUARTERS",
        "name": "",
        "to": 0,
        "type": "relativePreset",
        "visible": true,
      },
      Object {
        "from": 0,
        "granularity": "GDC.time.year",
        "localIdentifier": "THIS_YEAR",
        "name": "",
        "to": 0,
        "type": "relativePreset",
        "visible": true,
      },
      Object {
        "from": -1,
        "granularity": "GDC.time.year",
        "localIdentifier": "LAST_YEAR",
        "name": "",
        "to": -1,
        "type": "relativePreset",
        "visible": true,
      },
    ],
    "selectedOption": "THIS_MONTH",
  },
  "disableDefaultDrills": false,
  "disableSaveAsNewButton": false,
  "enableFilterValuesResolutionInDrillEvents": false,
  "initialRenderMode": "view",
  "isEmbedded": false,
  "isExport": false,
  "isReadOnly": false,
  "locale": "en-US",
  "mapboxToken": undefined,
  "menuButtonItemsVisibility": Object {},
  "objectAvailability": Object {},
  "separators": Object {
    "decimal": ".",
    "thousand": ",",
  },
  "settings": Object {
    "dashboardEditModeDevRollout": Any<Boolean>,
  },
}
`;

exports[`initialize dashboard handler for any dashboard should resolve permissions if none provided 1`] = `
Object {
  "canAccessWorkbench": true,
  "canCreateAnalyticalDashboard": true,
  "canCreateReport": true,
  "canCreateScheduledMail": true,
  "canCreateVisualization": true,
  "canExecuteRaw": true,
  "canExportReport": true,
  "canInitData": true,
  "canInviteUserToProject": true,
  "canListUsersInProject": true,
  "canManageACL": true,
  "canManageAnalyticalDashboard": true,
  "canManageDomain": true,
  "canManageMetric": true,
  "canManageProject": true,
  "canManageReport": true,
  "canManageScheduledMail": true,
  "canRefreshData": true,
  "canUploadNonProductionCSV": true,
}
`;

exports[`initialize dashboard handler should emit events in correct order and carry-over correlationId 1`] = `
Array [
  Object {
    "correlationId": "renderCorrelation",
    "type": "GDC.DASH/EVT.RENDER.REQUESTED",
  },
  Object {
    "commandType": "GDC.DASH/CMD.INITIALIZE",
    "correlationId": undefined,
    "type": "GDC.DASH/EVT.COMMAND.STARTED",
  },
  Object {
    "correlationId": undefined,
    "type": "GDC.DASH/EVT.FILTER_CONTEXT.DATE_FILTER.VALIDATION.FAILED",
  },
  Object {
    "correlationId": undefined,
    "type": "GDC.DASH/EVT.INITIALIZED",
  },
]
`;
